--- a/catkin_ws/src/gui/frontend/src/index.html
+++ b/catkin_ws/src/gui/frontend/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>McGill Robotics AUV Control Station</title>
+  <title>MR - AUV</title>
   <base href="/">
 
   <meta charset="utf-8">
