Major ROS integration; Functional gui

--- a/catkin_ws/src/gui/frontend/src/index.html
+++ b/catkin_ws/src/gui/frontend/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AUV Control Station</title>
+  <title>AUV Dockside</title>
   <base href="/">
 
   <meta charset="utf-8">
